New changes made today Session, tooltip & UI issues

--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -28,9 +28,9 @@
                     type="text"
                     class="form-control"
                     placeholder="Email"
+                    [value]="email"
                     required
-                    name="email"
-                    ngModel
+                   
                   >
 
                 </div>
