--- a/src/app/dashboard/left-side-bar/left-side-bar.component.html
+++ b/src/app/dashboard/left-side-bar/left-side-bar.component.html
@@ -14,8 +14,8 @@
 
   </div>
   <ul class="lft-icon-wrap p-0">
-    <li [routerLinkActive]="['active']" [routerLink]="['home']">
-      <div class="icnWrap ls-home ">
+    <li [routerLinkActive]="['active']" [ngClass]="{ 'tbut ctrlWidthLftB':lftSideBut }" (click)="sidebarLft1()" [routerLink]="['home']">
+      <div  class="icnWrap ls-home ">
 
         <span class="nrtitle">Home</span>
       </div>
@@ -23,7 +23,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['epp']">
+    <li [routerLinkActive]="['active']" [ngClass]="{ 'tbut ctrlWidthLftB':lftSideBut }" (click)="sidebarLft1()" [routerLink]="['epp']">
       <div class="icnWrap ls-epp">
 
         <span class="nrtitle">EPP</span>
@@ -36,7 +36,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['claims']">
+    <li [routerLinkActive]="['active']" [ngClass]="{ 'tbut ctrlWidthLftB':lftSideBut }" (click)="sidebarLft1()" [routerLink]="['claims']">
       <div class="icnWrap ls-claims">
 
         <span class="nrtitle">Claims</span>
@@ -45,7 +45,7 @@
 
 
     </li>
-    <li [hidden]="!showeol" [routerLinkActive]="['active']" [routerLink]="['eol']">
+    <li [hidden]="!showeol" [routerLinkActive]="['active']" [ngClass]="{ 'tbut ctrlWidthLftB':lftSideBut }" (click)="sidebarLft1()" [routerLink]="['eol']">
       <div class="icnWrap ls-eol">
 
         <span class="nrtitle">EOL</span>
@@ -54,7 +54,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['faq']">
+    <li [routerLinkActive]="['active']" [ngClass]="{ 'tbut ctrlWidthLftB':lftSideBut }" (click)="sidebarLft1()" [routerLink]="['faq']">
       <div class="icnWrap ls-faq ">
 
         <span class="nrtitle">FAQ</span>
@@ -63,7 +63,7 @@
 
 
     </li>
-    <li [routerLinkActive]="['active']" [routerLink]="['contact']">
+    <li [routerLinkActive]="['active']" [ngClass]="{ 'tbut ctrlWidthLftB':lftSideBut }" (click)="sidebarLft1()" [routerLink]="['contact']">
       <div class="icnWrap ls-con">
 
         <span class="nrtitle">Contact</span>
