--- a/src/app/dashboard/right-side-bar/right-side-bar.component.html
+++ b/src/app/dashboard/right-side-bar/right-side-bar.component.html
@@ -1,5 +1,3 @@
-
-
 <div id="SidenavRytBut" class="sidenavR" [ngClass]="{'tbut ctrlWidthRytR':rytSideBut}" (click)="sidebarRyt()">
 
 </div>
@@ -7,55 +5,56 @@
 <div id="SidenavRyt" [ngClass]="{'ctrlWidthRyt':rytSide}" class="prodisplay">
 
   <div class="row oddBg ">
-      <div class="w-50 ">
-          <div class="pro-img-pad">
-              <img src="assets/img/bitmap.png">
-          </div>
+    <div class="w-50 ">
+      <div class="pro-img-pad">
+        <img src="assets/img/bitmap.png">
       </div>
-      <div class="w-50  pro-cnt-wrap">
-          <h3>Coming Soon!</h3>
-          <p>Coming Soon!</p>
+    </div>
+    <div class="w-50  pro-cnt-wrap">
+      <h3>Coming Soon!</h3>
+      <p>New Equipments</p>
 
-      </div>
+    </div>
 
   </div>
 
   <div class="row evenBg">
-      <div class="  w-50  ">
-          <div class="pro-img-pad">
-              <img src="assets/img/pro-sample.png">
-          </div>
+    <div class="  w-50  ">
+      <div class="pro-img-pad">
+        <img src="assets/img/pro-sample.png">
       </div>
-      <div class="w-50  pro-cnt-wrap">
-          <h3>Coming Soon!</h3>
-          <p>Pay Towards your<br> lease</p>
+    </div>
+    <div class="w-50  pro-cnt-wrap">
+      <h3>Coming Soon!</h3>
+      <p>Pay Towards your lease</p>
 
-      </div>
+    </div>
   </div>
   <div class="row oddBg ">
-      <div class="w-50 ">
-          <div class="pro-img-pad">
-              <img src="assets/img/pro-sample.png">
-          </div>
+    <div class="w-50 ">
+      <div class="pro-img-pad">
+        <img src="assets/img/pro-sample.png">
       </div>
-      <div class="w-50  pro-cnt-wrap">
-          <h3>Coming Soon!</h3>
-          <p>Lease Document <br>Management</p>
+    </div>
+    <div class="w-50  pro-cnt-wrap">
+      <h3>Coming Soon!</h3>
+      <p>Lease Document <br>Management</p>
+      <span>PAYMENT</span>
 
-      </div>
+    </div>
 
   </div>
   <div class="row evenBg">
-      <div class="  w-50  ">
-          <div class="pro-img-pad">
-              <img src="assets/img/pro-sample.png">
-          </div>
+    <div class="  w-50  ">
+      <div class="pro-img-pad">
+        <img src="assets/img/pro-sample.png">
       </div>
-      <div class="w-50  pro-cnt-wrap">
-          <h3>Coming Soon!</h3>
-          <p>Single Sign on to your <br> favorite acquiring Dashboard</p>
+    </div>
+    <div class="w-50  pro-cnt-wrap">
+      <h3>Coming Soon!</h3>
+      <p>Single Sign on to your <br> favorite acquiring <br>Dashboard</p>
 
-      </div>
+    </div>
   </div>
 
 
