--- a/src/app/errorhandler/error401/error401.component.html
+++ b/src/app/errorhandler/error401/error401.component.html
@@ -1,4 +1,12 @@
-<p>
-    Your session has expired. 
+<div class="col-sm  errorwrap">
+  <div class="errorinner">
+    <div class="text-center"><img src="/assets/img/error.svg"></div>
+    <label></label>
+    Your session has expired.<br>
     Please <a (click)="loginclick()">log in</a> again to continue.
-</p>
+
+<br><br><br><br><br><br>
+  </div>
+
+
+</div>
