--- a/src/app/errorhandler/serviceerrors/serviceerrors.component.html
+++ b/src/app/errorhandler/serviceerrors/serviceerrors.component.html
@@ -1,4 +1,12 @@
-<p>
-    The service you requested is unavailable. 
+<div class="col-sm  errorwrap">
+  <div class="errorinner">
+    <div class="text-center"><img src="/assets/img/error.svg"></div>
+    <label></label>
+    The service you requested is unavailable.<br>
     Please try again.
-</p>
+
+    <br><br><br><br><br><br>
+  </div>
+
+
+</div>
