--- a/src/app/auth/new/signthank/signthank.component.html
+++ b/src/app/auth/new/signthank/signthank.component.html
@@ -1,4 +1,4 @@
-<div id="signWrap" class="container-fluid">
+<div id="signWrap" class="container-fluid ">
     <div class="row">
       <div class="col-sm-12 success-wrap th-outer-wrap  ">
         <h1 id="brandLogo" class="text-center"><img src="./assets/img/firstdata_logo.svg"></h1>
@@ -9,12 +9,12 @@
           2017-2018 First Data Corporation. All Rights Reserved. <a href="https://www.firstdata.com/en_us/privacy.html" target="blank">Privacy
           Policy</a>
         </h6>
-  
+
         <button type="submit" (click)="temp()"
-                class="btnSubmit btn btn-primary btn-lg btn-block">Done
+                class="btnSubmit btn btn-primary btn-lg btn-block thankwrap">Done
         </button>
-  
+
       </div>
-  
+
     </div>
   </div>
