--- a/src/app/dashboard/epp/epp.component.css
+++ b/src/app/dashboard/epp/epp.component.css
@@ -1,22 +1,12 @@
-.ftrBtnWrap .btn.disabled, .ftrBtnWrap .btn:disabled{
-    opacity: .6;
-    background: #999999;
-    color:#000000;
+.ftrBtnWrap .btn.disabled, .ftrBtnWrap .btn:disabled {
+  opacity: .6;
+  background: #999999;
+  color: #000000;
 }
 
-.ftrBtnWrap .btn:not(:disabled):not(.disabled){opacity: 1;
-    background: #0072ce;
-    color:white;}
-
-    .your-epp div{
-        padding: 10px;
-        border:1px solid red;
-        margin: 10px;
-      }
-      
-      .leaseCardSelected{
-        border: 1px solid green !important;
-      }
-      .slick-slide{
-        width: 180px;
-        }
+.ftrBtnWrap .btn:not(:disabled):not(.disabled) {
+  opacity: 1;
+  background: #ffffff;
+  color: #0072ce;
+  border: 1px solid #0072ce;
+}
