--- a/src/app/dashboard/epp/eppthank/eppthank.component.html
+++ b/src/app/dashboard/epp/eppthank/eppthank.component.html
@@ -1,4 +1,4 @@
-<div id="signWrap" class="container-fluid eppthankwrap">
+<div id="signWrap" class="container-fluid eppthankwrap ">
     <div class="row">
       <div class="col-sm-12 success-wrap th-outer-wrap  ">
         <br><br><br><br>
@@ -6,14 +6,13 @@
         <h1 class="text-center th-logowrap"><img src="./assets/img/TickIcon.svg"></h1>
         <h1 class="text-center th-head ">Thank you</h1>
         <p class="text-center th-txt">You have successfully enrolled for EPP. Your EPP status will be updated in the next 24-48 hours</p>
-  
+
           <br><br>
         <button type="submit" (click)="dboard()"
-                class="btnSubmit btn btn-primary btn-lg btn-block">Done
+                class="btnSubmit btn btn-primary btn-lg btn-block thankwrap">Done
         </button>
-  
+
       </div>
-  
+
     </div>
   </div>
-  
