--- a/src/app/landing-page/land-cnt-01/land-cnt-01.component.html
+++ b/src/app/landing-page/land-cnt-01/land-cnt-01.component.html
@@ -1,19 +1,18 @@
+
 <div class="col-12 land-cnt-01 ">
   <div class="row">
     <div class="col-12 col-md-6 land-cnt-01-inner text-left ">
 
       <h4 class="fd-SubHeading"> Benefits for Business</h4>
-      <p class="">With no upfront investment, you can pay for your equipment out of your cash flow and
-        preserve
-        your working capital and available credit. A low monthly lease payment will allow your POS
-        equipment to start earning for you immediately so that you can keep your focus on growing your
-        day-to-day business.</p>
+      <p class="">With no upfront investment, you can pay for your POS equipment over time out of your cash flow and
+        preserve your working capital and available credit. A low monthly lease payment will allow your POS equipment to
+        start earning for you immediately so that you can keep your focus on growing your day-to-day business.</p>
       <p>Conserve your capital - what else could you do with your cash and credit lines?</p>
       <ul class="land-cnt-wrap">
 
         <li><span>&#x25CF;</span>Expand your business</li>
         <li><span>&#x25CF;</span>Rejuvenate your website</li>
-        <li><span>&#x25CF;</span>Increase advertising and promotional funds</li>
+        <li><span>&#x25CF;</span>Increase advertising and promotional spending</li>
         <li><span>&#x25CF;</span>Replenish low or out-of-stock inventory</li>
         <li><span>&#x25CF;</span>Renovate your storefront or modernize your warehouse</li>
         <li><span>&#x25CF;</span>Refresh your fleet vehicles</li>
